--- a/Week1Assinment1/index.html
+++ b/Week1Assinment1/index.html
@@ -4,130 +4,131 @@
     <meta charset="UTF-8">
     <title>Assignment1</title>
     <style>
-        nav {
-            margin: 27px auto 0;
-            position: relative;
-            width: 590px;
-            height: 50px;
-            background-color: #34495e;
-            border-radius: 8px;
-            font-size: 0;
+        .wrapper {
+            display: grid;
+            grid-template: auto 1fr minmax(1rem, auto) auto / 100%;
+            min-height: 100vh;
+        @media (min-width: 40rem) {
+            grid-template: 5rem 1fr auto / 1fr repeat(6, minmax(auto, 10rem)) 1fr;
         }
-        nav a {
-            line-height: 50px;
-            height: 100%;
-            font-size: 15px;
+        }
+
+        .header {
+            background-color: black;
+                order: 1;
+            @media (min-width: 40rem) {
+                grid-column: span 8;
+            }
+        }
+
+        .header--inner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 1rem;
+            background-color: #000000;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .nav {
+            margin-top: 1rem;
+        @media (min-width: 40rem) {
+            margin-top: 0;
+            margin-left: auto;
+        }
+        }
+
+        .nav--link {
             display: inline-block;
-            position: relative;
-            z-index: 1;
+            color: #ffffff;
+            padding: .5rem .75rem;
             text-decoration: none;
-            text-transform: uppercase;
-            text-align: center;
+        &:hover {
+             background-color: #3b34ee;
+             color: #555;
+         }
+        }
+
+        .main {
+            order: 2;
+            padding: 1rem;
+            background-color: #fff;
+        @media (min-width: 40rem) {
+            order: 3;
+            grid-column: 3/8;
+            padding: 2rem;
+            border-right: 1px solid #ccc;
+        }
+        }
+
+        .aside {
+            order: 3;
+            padding: 1rem;
+            background-color: #eee;
+            border-top: 1px solid #ccc;
+        @media (min-width: 40rem) {
+            order: 2;
+            grid-column: 2/2;
+            border-top: 0;
+            border-right: 1px solid #ccc;
+        }
+        }
+
+        .footer {
+            order: 4;
+            padding: 1rem;
             color: white;
-            cursor: pointer;
+            text-align: center;
+            border-top: 1px solid #ccc;
+            background-color: #000000;
+        @media (min-width: 40rem) {
+            grid-column: span 8;
         }
-        nav .animation {
-            position: absolute;
-            height: 100%;
-            top: 0;
-            z-index: 0;
-            transition: all 0.5s ease 0s;
-            border-radius: 8px;
         }
-        a:nth-child(1) {
-            width: 100px;
-        }
-        a:nth-child(2) {
-            width: 110px;
-        }
-        a:nth-child(3) {
-            width: 100px;
-        }
-        a:nth-child(4) {
-            width: 160px;
-        }
-        a:nth-child(5) {
-            width: 120px;
-        }
-        nav .start-home,
-        a:nth-child(1):hover ~ .animation {
-            width: 100px;
-            left: 0;
-            background-color: #1abc9c;
-        }
-        nav .start-about,
-        a:nth-child(2):hover ~ .animation {
-            width: 110px;
-            left: 100px;
-            background-color: #e74c3c;
-        }
-        nav .start-blog,
-        a:nth-child(3):hover ~ .animation {
-            width: 100px;
-            left: 210px;
-            background-color: #3498db;
-        }
-        nav .start-portefolio,
-        a:nth-child(4):hover ~ .animation {
-            width: 160px;
-            left: 310px;
-            background-color: #9b59b6;
-        }
-        nav .start-contact,
-        a:nth-child(5):hover ~ .animation {
-            width: 120px;
-            left: 470px;
-            background-color: #e67e22;
+
+        // Setup
+           * {
+               box-sizing: border-box;
+           }
+
+        html {
+            font-size: 18px;
+            font-family: Helvetica, Arial, sans-serif;
+            color: #333;
+            background-color: #eee;
         }
 
         body {
-            font-size: 12px;
-            font-family: sans-serif;
-            background: #2c3e50;
-        }
-        h1 {
-            text-align: center;
-            margin: 40px 0 40px;
-            text-align: center;
-            font-size: 30px;
-            color: #ecf0f1;
-            text-shadow: 2px 2px 4px #000000;
-            font-family: "Cherry Swash", cursive;
-        }
-
-        p {
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            text-align: center;
-            color: #ecf0f1;
-            font-family: "Cherry Swash", cursive;
-            font-size: 16px;
-        }
-
-        span {
-            color: #2bd6b4;
-        }
-        footer{
-            color: #ffb2ff;
+            font-size: 1rem;
+            line-height: 1.8;
+            padding: 0;
+            margin: 0;
         }
 
     </style>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Blog</a>
-        <a href="#">Portefolio</a>
-        <a href="#">Contact</a>
-        <div class="animation start-home"></div>
-    </nav>
-
 </head>
 <body>
+<div class="wrapper">
+    <header class="header">
+        <div class="header--inner">
+            <nav class="nav">
+                <a href="#" class="nav--link">Home</a>
+                <a href="#" class="nav--link">About</a>
+                <a href="#" class="nav--link">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        Main content
+        <div>
+            <a href="detail.html">Go To Detail Page</a>
+        </div>
+    </main>
+    <footer class="footer">
+        Footer
+    </footer>
+</div>
 
-<footer>
-
-</footer>
 </body>
 </html>
