--- a/Week1Assinment1/detail.html
+++ b/Week1Assinment1/detail.html
@@ -12,7 +12,7 @@
 
         .header {
             background-color: black;
-                order: 1;
+            order: 1;
         }
 
         .header--inner {
@@ -74,6 +74,9 @@
             padding: 0;
             margin: 0;
         }
+        section{
+            text-align: center;
+        }
 
     </style>
 
@@ -91,9 +94,16 @@
     </header>
     <main class="main">
         Main content
-        <div>
-            <a href="detail.html">Go To Detail Page</a>
-        </div>
+        <section>
+            <header>
+                <h2>Embed by iframe</h2>
+            </header>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/E9BdmdTeiWw" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+            </iframe>
+        </section>
     </main>
     <footer class="footer">
         Footer
